--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,8 @@ authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
 
 [dependencies]
 base58 = "*"
+digest = "0.7"
+ed25519-dalek = "0.6"
 either = "1"
 openssl = "0.10"
 serde = { version = "1", optional = true, features = ["derive"] }
