--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.2.2"
 authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
 
 [dependencies]
+arrayvec = "0.4"
 base58 = "*"
 digest = "0.7"
 ed25519-dalek = "0.6"
