--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
 
 [dependencies]
 arrayvec = "0.4"
-base58 = "*"
+base58 = "0.1"
 digest = "0.7"
 either = "1"
 lazy_static = "1"
